--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web3client",
+  "name": "RaiseHQ-client",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -18,6 +18,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
     "vite": "^3"
   }
 }
